# sash3

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  design_decisions.md  notes.md  roadmap.md
include/: builtin.hpp  command.hpp  executor.hpp  history.hpp  job.hpp  jobs.hpp  lexer.hpp  parser.hpp  pipeline.hpp  shell.hpp
src/: builtin.cpp  executor.cpp  history.cpp  jobs.cpp  lexer.cpp  main.cpp  parser.cpp  shell.cpp
